# src/modules/auth/dto/admin-login.dto.ts
@@ -1,18 +1,12 @@
-import { ApiProperty } from '@nestjs/swagger';
-import { Transform } from 'class-transformer';
-import { IsNotEmpty } from 'class-validator';
-import { IsEmailField } from 'src/common/decorators/validation.decorators';
+import {
+  IsEmailField,
+  IsPasswordField,
+} from 'src/common/decorators/validation.decorators';
 
 export class AdminLoginDto {
   @IsEmailField('Email du compte back-office')
   email: string;
 
-  @ApiProperty({
-    description: 'Mot de passe',
-    example: 'MonMotDePasse!2026',
-    required: true,
-  })
-  @IsNotEmpty()
-  @Transform(({ value }) => (typeof value === 'string' ? value.trim() : value))
+  @IsPasswordField('Mot de passe', 'MonMotDePasse!2026')
   password: string;
 }
